# game_of_life

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README  README.md  build_windows_static.sh  build_windows_static_x64.sh  build_windows_static_x86.sh  commands.cpp  commands.h  game_of_life.cpp  game_of_life.h  import.cpp  import.h  main.cpp  main.h  ui.cpp  ui.h
arch-pkgbuild/: PKGBUILD
examples/: copymachine.rle  glider.lif
src/: commands.cpp  commands.h  game_of_life.cpp  game_of_life.h  import.cpp  import.h  import_export.cpp  import_export.h  main.cpp  main.h  ui.cpp  ui.h  util.cpp  util.h
tools/: .clang-format  build_windows_static_x64.sh  build_windows_static_x86.sh  format_code.sh
tools/unittest/: unit_test.sh
tools/unittest/control/: copy.cells  fillall.cells  glider.cells  rle1.cells
tools/unittest/patterns/: copy.rle  glider.cells  glider.rle  pattern_1.rle
tools/unittest/tests/: copy.test  fillall.test  glider_cells.test  glider_lif.test  glider_rle.test  rle1.test
